--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-auth-form></app-auth-form>
+<div class="product-container">
+  <app-product-card (isAddToCartClicked)="onButtonClick()"> </app-product-card>
+  <app-product-card (isAddToCartClicked)="onButtonClick()"> </app-product-card>
+</div>
