single slot projection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="product-container">
-  <app-product-card (isAddToCartClicked)="onButtonClick()"> </app-product-card>
-  <app-product-card (isAddToCartClicked)="onButtonClick()"> </app-product-card>
+  <app-product-card (isAddToCartClicked)="onButtonClick()">
+    <p class="product-name">Mountain Bike</p>
+  </app-product-card>
+  <app-product-card (isAddToCartClicked)="onButtonClick()">
+    <p class="product-name">Standard Bike</p>
+  </app-product-card>
 </div>
