content children example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,7 @@
       <a>Add To WishList</a>
     </div>
     <app-notify-me (checked)="onNotifyMeClicked($event)"></app-notify-me>
+    <app-notify-me (checked)="onNotifyMeClicked($event)"></app-notify-me>
+    <app-notify-me (checked)="onNotifyMeClicked($event)"></app-notify-me>
   </app-product-card>
 </div>
