--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,7 @@
   <div class="product-cards-row">
     <ng-container #container> </ng-container>
   </div>
+  <ng-template #notifyMe>
+    <app-notify-me (checked)="onNotifyMeClicked($event)"></app-notify-me>
+  </ng-template>
 </div>
